# iiif-auth-proxy

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  compose.override.yml.example  compose.yml  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
.github/: dependabot.yml
.github/workflows/: dependabot-slack-notification.yml  dependabot.yml
app/deploy/: docker-run.sh
app/iiif/: apps.py  generate_token.py  tests.py  tools.py  urls.py  views.py
app/settings/: middleware.py  settings.py  urls.py  wsgi.py
deploy/: docker-run.sh
manifests/: values.yaml
manifests/env/: dev.yaml  local.yaml
pipeline/: trigger:.yml
src/: azure-queue-processor.py
src/auth_mail/: authentication.py  generate_token.py  urls.py  views.py
src/deploy/: docker-run.sh  stunnel.conf
src/health/: urls.py  views.py
src/iiif/: apps.py  authentication.py  cantaloupe.py  generate_token.py  image_formatting.py  image_handling.py  image_server.py  ingress_email_consumer.py  ingress_zip_consumer.py  mailing.py  metadata.py  object_store.py  parsing.py  queue_zip_consumer.py  tests.py  tools.py  urls.py  utils.py  utils_azure.py  views.py  zip_tools.py
src/main/: settings.py  urls.py  utils.py  uwsgi.ini  (+3 more)
tests/: conftest.py  test_consumer_zips.py  test_health.py  test_iiif.py  test_image_formatting.py  test_image_handling.py  test_image_server.py  test_image_server_timeouts.py  test_settings.py  test_tools.py  test_utils.py  test_utils_azure.py  test_zip_endpoint.py  tools.py
(+32 files in other folders)
